// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render for active challenge 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingHorizontal": 40,
        "paddingVertical": 10,
      },
      Object {
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 5,
          "flexDirection": "column",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "lineHeight": 30,
            },
          ]
        }
      >
        Challenge Title
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 10,
            },
          ]
        }
      >
        End Date
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontSize": 14,
            },
          ]
        }
        testID="Text"
      >
        Sunday, August 25, 2019
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Days Left
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Joined
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Completed
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`render for active challenge with edit 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingHorizontal": 40,
        "paddingVertical": 10,
      },
      Object {
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 5,
          "flexDirection": "column",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ChallengeDetailHeaderEditButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#52C5DC",
                      "fontSize": 14,
                      "fontWeight": "300",
                      "letterSpacing": 1,
                    },
                  ],
                ]
              }
            >
              Edit
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "lineHeight": 30,
            },
          ]
        }
      >
        Challenge Title
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 10,
            },
          ]
        }
      >
        End Date
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontSize": 14,
            },
          ]
        }
        testID="Text"
      >
        Sunday, August 25, 2019
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Days Left
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Joined
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Completed
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`render for past challenge 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingHorizontal": 40,
        "paddingVertical": 10,
      },
      Object {
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 5,
          "flexDirection": "column",
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "lineHeight": 30,
            },
          ]
        }
      >
        Challenge Title
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
              "fontSize": 10,
            },
          ]
        }
      >
        End Date
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontSize": 14,
            },
          ]
        }
        testID="Text"
      >
        Sunday, August 25, 2019
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingVertical": 8,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Days
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        >
          1
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Joined
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#A0A2A6",
                "fontSize": 10,
              },
            ]
          }
        >
          Completed
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontFamily": "SourceSansPro-ExtraLight",
                "fontSize": 48,
                "lineHeight": 50,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;
